WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57504
WebHTMLView shouldn't resend noop: commands
https://bugs.webkit.org/show_bug.cgi?id=57504
Summary
WebHTMLView shouldn't resend noop: commands
Alexey Proskuryakov
Reported
2011-03-30 13:48:20 PDT
Resending a noop: command for every Cmd+key combo breaks a certain client application. <
rdar://problem/9209390
>
Attachments
proposed fix
(1.37 KB, patch)
2011-03-30 14:00 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-03-30 14:00:52 PDT
Created
attachment 87609
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2011-03-30 17:11:56 PDT
Committed <
http://trac.webkit.org/changeset/82524
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug