        Reviewed by Darin Adler.

WebHTMLView shouldn't resend noop: commands
        https://bugs.webkit.org/show_bug.cgi?id=57504
        <rdar://problem/9209390>

        * WebView/WebHTMLView.mm: (-[WebHTMLView _executeSavedEditingCommands]): Filter out NOOPs,
        which we get e.g. when handling Cmd-key combos.



Canonical link: https://commits.webkit.org/72321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82524 268f45cc-cd09-0410-ab3c-d52691b4dbfc